Some fixes for height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,3 @@
   align-items: center;
   flex-direction: column;
 }
-
-.space-maker {
-  height: 6000vh;
-}
