--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -25,6 +25,7 @@
   border: 1px solid var(--menu-color-summary);
 
   width: 100%;
+  height: 200px;
 
   display: flex;
   flex-direction: column;
