--- a/src/index.scss
+++ b/src/index.scss
@@ -13,11 +13,14 @@
 }
 
 html {
-  height: 6000px;
+  height: fit-content;
 }
 
 body {
-  height: 100%;
+  height: 6000px;
+  overflow: auto;
+  border: 1px dashed orange;
+  position: relative;
 
   margin: 0;
   padding: 0;
